--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     		<div class="row d-flex no-gutters">
     			<div class="col-md-6 d-flex">
     				<div class="img img-video d-flex " style="background-image:url(images/church_view.jpg);">
-    					<a href="https://vimeo.com/45830194" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
+    					<a href="https://www.youtube.com/watch?v=UqvjRZTS9tA" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
     						<span class="icon-play"></span>
     					</a>
     				</div>
